First component replication added

--- a/SimpleMultiplayer/SimpleMultiplayer.uproject
+++ b/SimpleMultiplayer/SimpleMultiplayer.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "SimpleMultiplayer",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
